# edit

./: CLAUDE.md  Cargo.toml
queries/: markdown_highlights.scm
src/: lib.rs  syntax.rs  tui.rs
src/buffer/: mod.rs
